Changes since 2.9.4:
	- heap of work in shortening dnspacket.cc (factor out common operations)
	- work on recursor
	- recursor renamed 
	- added unknown record type support (+1024)
	- added names for SIG and KEY records
	- HINFO incoming
	- UltraSparc alignment issues Chris Andrews
	
Changes since 2.9.3a:
feat	- make *all* sql in gsqlbackends available for configuration (Martin Klebermass/bert hubert)
feat	- recursor
impr	- axfr backend transaction now only started after first actual
	  record is in
impr	- improved zone parser error message about time specification
impr	- huge improvement in performance of bind-domain-status
		(spotted by Erik Bos)
impr	- AXFR terminated with an EOF is now an error, unless a second SOA
		was seen
impr	- 'migration' chapter was outdated	
bug	- zone parser now allows both $include and $INCLUDE
bug	- wildcard ANY queries work again (colemarcus)
bug	- resolved crashes after failed gmysql/gpgsql connections
bug	- major brokenness in slave support in gmysql/gpgsql (mark)
bug	- solaris compilation fixes
bug	- make IPv6 work again on FreeBSD (Peter van Dijk)
bug	- neglected to properly initialize the socklen of accept of dynlistener ;-(

bug	- multiple backends+axfr work again

bug	- improve bindbackend abortTransaction
		should no longer block the zone

bug	- further alignment fixes (should help on UltraSparc)

bug	- fixes for more recent libpq++ (Julien LEMOINE / SpeedBlue)
bug	- socklen wasn't filled in with multiple listen addresses
bug	- tyop in manpages resolved (Marco Davids)




Changes since 2.9.2:
	- windows compilation patches
	- tiny improvements in win98 error messages
	- pgmysqlbackend may have been unable to launch
		now called gpgsql and gpgsql2
	- bind backend can now deal with broken and missing zones
	- bind backend reports way more errors instead of just falling over
	- can now understand incoming RP records in AXFR
	- fixed potential crasher bug in shortened packet parsing
	- now groks LOC records incoming/outgoing