@@ -19,7 +19,7 @@
 #ifndef QTYPE_HH
 #define QTYPE_HH
 /* (C) 2002 POWERDNS.COM BV */
-// $Id: qtype.hh,v 1.3 2003/01/21 10:42:34 ahu Exp $
+// $Id: qtype.hh,v 1.4 2003/01/21 15:04:02 ahu Exp $
 #include <string>
 #include <vector>
 #include <utility>
@@ -59,7 +59,7 @@ public:
 
   static int chartocode(const char *p); //!< convert a character string to a code
   
-  enum {A=1,NS=2,CNAME=5,SOA=6,PTR=12,HINFO=13,MX=15,TXT=16,RP=17,AAAA=28,LOC=29,NAPTR=35,AXFR=252, ANY=255} types;
+  enum {A=1,NS=2,CNAME=5,SOA=6,PTR=12,HINFO=13,MX=15,TXT=16,RP=17,AAAA=28,LOC=29,SRV=33,NAPTR=35,AXFR=252, ANY=255} types;
 private:
   short int code;
   typedef pair<string,int> namenum; 
